--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/IC-01.png">
+    <link rel="icon" type="image/png" sizes="32x32"
+      href="./images/IC-01.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Calculator</title>
 
@@ -16,7 +19,7 @@
     <div class="container">
 
       <div class="header">
-        <h1 class="logo">Calculator</h1>
+        <h1 class="logo">calc</h1>
         <div class="theme-div">
           <span>theme</span>
           <div class="toggle-switch" id="theme-toggle">
@@ -47,12 +50,12 @@
         <div class="key" data-key-value=".">.</div>
         <div class="key" data-key-value="0">0</div>
         <div class="key" data-key-value="/">/</div>
-        <div class="key" data-key-value="x">x</div>
+        <div class="key" data-key-value="×">×</div>
         <div class="key custom-1 col-span-2" data-key-value="reset">reset</div>
         <div class="key equal col-span-2" data-key-value="=">=</div>
       </div>
     </div>
 
-    <script src="/Javascript/script.js"></script>
+    <script src="Javascript/script.js"></script>
   </body>
 </html>
