--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
 
       <div class="header">
-        <h1 class="logo">calc</h1>
+        <h1 class="logo">Calculator</h1>
         <div class="theme-div">
           <span>theme</span>
           <div class="toggle-switch" id="theme-toggle">
